[tool.poetry]
name = "microblog"
version = "0.1.0"
description = "This project give me job"
authors = ["Miron <miron.nicolaevich@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.4.0"
gunicorn = "^23.0.0"
pydantic = {extras = ["email"], version = "^2.8.2"}
redis = {extras = ["hiredis"], version = "^5.1.1"}
pillow = "^11.0.0"
pika = "^1.3.2"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
python-multipart = "^0.0.20"
protobuf = "^5.29.2"
grpcio = "^1.68.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
black = "^24.8.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
pre-commit = "^3.8.0"
pytest = "^8.3.2"
coverage = "^7.6.1"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.24.0"
asgi-lifespan = "^2.1.0"
httpx = "^0.27.2"
types-redis = "^4.6.0.20241004"
pika-stubs = "^0.1.3"


[tool.coverage.run]
branch = true
source = ["src"]

[tool.mypy]
python_version = 3.12
module_paths = ["src"]
ignore_missing_imports = true
mypy_path = ["src"]
packages = ["src"]
exclude = '''
   (?x)
   ^\.venv/ |
   ^test/ |
   ^tests/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 79
include = '\.py'
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
